<resources>
    <string name="app_name">SmartHelp</string>
    <string name="profile">Профиль</string>
    <string name="posts">Посты</string>
    <string name="settings">Настройки</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anonymous">Анонимно</string>
    <string name="authorization">Авторизация</string>
    <string name="template_user">Гумеров Фидан</string>
    <string name="titlePost">Простой заголовок поста</string>
    <string name="template_text">Текст поста других пользователей с ограниченным количеством символов</string>
    <string name="preview">SmartHelp</string>
    <string name="exit">Выйти</string>
    <string name="go_google_auth">Вы зашли анонимно, попробуйте авторизоваться через Google</string>
    <string name="avatar">avatar</string>
    <string name="profile_text">Список собственных постов</string>
</resources>