<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/add_post"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/round_button"
            android:src="@drawable/ic_add"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:clickable="true"
            android:focusable="true"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/posts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        android:visibility="invisible">
        <LinearLayout
            android:id="@+id/account_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="124dp"
                android:layout_height="124dp"
                android:src="@drawable/main_avatar"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_user"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/no_auth_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            android:layout_below="@id/account_info"
            android:visibility="invisible">
            <TextView
                android:id="@+id/text_go_google_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_google_auth"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="@string/exit"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="25dp"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/block_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="45dp"
            android:layout_below="@id/account_info"
            android:visibility="invisible">


        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:itemTextColor="@color/blue"
        app:itemIconTint="@color/blue"
        app:itemIconSize="25dp"
        android:background="@drawable/bottom_state"
        app:menu="@menu/bottom_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>